[gd_scene load_steps=10 format=3 uid="uid://7vpa2j7c454g"]

[ext_resource type="Script" path="res://scripts/game_world.gd" id="1_fyj1r"]
[ext_resource type="PackedScene" uid="uid://js725cdp6rq2" path="res://scenes/characters/sprite.tscn" id="2_knvp0"]
[ext_resource type="PackedScene" uid="uid://dgciynjjiu4er" path="res://scenes/characters/character.tscn" id="3_esfte"]
[ext_resource type="PackedScene" uid="uid://bjx0qr7rglxml" path="res://scenes/components/pain_bar.tscn" id="5_ge1mm"]
[ext_resource type="Texture2D" uid="uid://7yy8b6ffcadc" path="res://assets/Tattoo_Visual.png" id="6_4pu4q"]
[ext_resource type="PackedScene" uid="uid://cmy4e0lx6o4ew" path="res://scenes/game_elements/table.tscn" id="6_h3mm0"]
[ext_resource type="PackedScene" uid="uid://76sp2httv23d" path="res://scenes/components/flash.tscn" id="7_bx58i"]
[ext_resource type="PackedScene" uid="uid://ci1afl8yvra7x" path="res://scenes/components/ink_bar.tscn" id="8_jynve"]
[ext_resource type="SpriteFrames" uid="uid://be0n4fu82qv4q" path="res://assets/fonts/clients_numbers.aseprite" id="9_4pn63"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_fyj1r")

[node name="Sprite" parent="." instance=ExtResource("2_knvp0")]
position = Vector2(119, 36)

[node name="Character" parent="." instance=ExtResource("3_esfte")]
position = Vector2(161, 91)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(78, 94)
build_mode = 1
polygon = PackedVector2Array(-4, -18, -1, -38, 2, -55, 6, -62, 12, -71, 22, -79, 38, -85, 61, -87, 92, -88, 127, -85, 155, -74, 180, -59, 182, -37, 178, -25, 162, -13, 160, -6, 153, 13, 145, 28, 136, 41, 123, 42, 101, 42, 83, 39, 63, 36, 56, 32, 59, 22, 44, 7, 35, 20, 24, 25, 9, 25, -2, 10, -2, -9)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
z_index = -1000
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
canvas_cull_mask = 4293918722
size = Vector2i(320, 180)
render_target_update_mode = 4

[node name="Background" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
visibility_layer = 2
z_index = -10
position = Vector2(160, 90)
texture = ExtResource("6_4pu4q")

[node name="Flash" parent="." instance=ExtResource("7_bx58i")]

[node name="Table" parent="." instance=ExtResource("6_h3mm0")]

[node name="PainBar" parent="." instance=ExtResource("5_ge1mm")]
z_index = 3
position = Vector2(277, 144)

[node name="InkBar" parent="." instance=ExtResource("8_jynve")]
position = Vector2(298, 165)

[node name="Bar" parent="InkBar" index="0"]
offset_right = 118.0

[node name="ClientCount" type="AnimatedSprite2D" parent="."]
z_index = 10
position = Vector2(258, 127)
sprite_frames = ExtResource("9_4pn63")
frame = 9

[connection signal="on_failure" from="." to="Sprite" method="_on_failure"]
[connection signal="on_failure" from="." to="Character" method="on_failure"]
[connection signal="on_character_move" from="Character" to="PainBar" method="_on_character_move"]
[connection signal="on_character_move" from="Character" to="InkBar" method="_on_character_move"]
[connection signal="on_time_out" from="Table" to="." method="_on_time_out"]
[connection signal="on_pain_exceeded" from="PainBar" to="." method="_on_pain_exceeded"]
[connection signal="on_ink_depleted" from="InkBar" to="." method="_on_ink_depleted"]

[editable path="InkBar"]
